--- a/src/Section/Sope/SopeSection1/style.scss
+++ b/src/Section/Sope/SopeSection1/style.scss
@@ -45,6 +45,12 @@
         }
 
         .SopeSection1_Aside_Part3{
+
+            .SopeSection1_Aside_Part3_POPULARBRANDS{
+                display: grid;
+                grid-template-columns: auto auto;
+            }
+
             margin: {
                 bottom: 24px;
             }
@@ -56,78 +62,143 @@
             div{
                 margin: {
                     bottom: 12px;
-                }
-            }
-        }
-
-        .SopeSection1_Aside_Part4{
-            margin: {
-                bottom: 24px;
-            }
-            p{
-                margin: {
-                    bottom: 16px;
-                }
-            }
-            div{
-                margin: {
-                    bottom: 12px;
-                }
-            }
-        }
-
-
-    }
-    .SopeSection1_Content{
-        margin: {
-            top: 40px;
-            bottom: 72px;
-        }
-    }
-    .SopeSection1_Content_Part2{
-        background-color: #F2F4F5;
-        height: 44px;
-        margin: {
-            top: 16px;
-            bottom: 24px;
-        }
-        @include Center(space-between);
-
-        .SopeSection1_Aside_Part2_Left{
-            margin: {
-                right: 24px;
-                left: 24px;
-            }
-            @include Center(space-evenly);
-
-            .SopeSection1_Aside_Part1_Left_ActiveFilterd{
-                @include Center(center);
-                margin: {
-                    right: 16px;
-                    left: 16px;
-                }
-                
-                p img{
-                    margin: {
-                        right: 5px;
-                        left: 5px;
-                        bottom: -2px;
-                    }
                 }
             }
         }
         
-        .SopeSection1_Aside_Part2_Right{
-            margin: {
-                right: 24px;
-                left: 24px;
+        .SopeSection1_Aside_Part4{
+
+            .SopeSection1_Aside_Part4_Titel{
+                margin-bottom: 24px;
             }
-            @include Center(space-evenly);
+
+            .SopeSection1_Aside_Part4_Tag{
+                display: grid;
+                grid-template-columns: auto auto auto;
+                justify-items: center;
+                row-gap: 10px;
+
+                .ButtonFilter div{
+                    padding: 15px;
+                }
+            }
             
-            p{
+        }
+
+        .SopeSection1_Aside_Part5{
+            margin: {
+                top: 50px;
+            }
+        }
+         
+    }
+    .SopeSection1_Content{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: {
+            top: 40px;
+            bottom: 72px;
+        }
+
+        .SopeSection1_Content_Part1{
+            width: 984px;
+            @include Center(space-between);
+        }
+        
+        .SopeSection1_Content_Part2{
+            width: 984px;
+            height: 44px;
+            background-color: #F2F4F5;
+            margin: {
+                top: 16px;
+                bottom: 24px;
+            }
+            @include Center(space-between);
+            
+            .SopeSection1_Content_Part2_Left{
                 margin: {
-                    right: 3px;
-                    left: 3px;
+                    right: 24px;
+                    left: 24px;
+                }
+                @include Center(space-evenly);
+                
+                .SopeSection1_Content_Part1_Left_ActiveFilterd{
+                    @include Center(center);
+                    margin: {
+                        right: 16px;
+                        left: 16px;
+                    }
+                    
+                    p{
+                        margin: {
+                            right: 10px;
+                            left: 10px;
+                        }
+                    }
+
+                    p img{
+                        margin: {
+                            right: 5px;
+                            left: 5px;
+                            bottom: -2px;
+                        }
+                    }
+                }
+            }
+            
+            .SopeSection1_Aside_Part2_Right{
+                margin: {
+                    right: 24px;
+                    left: 24px;
+                }
+                @include Center(space-evenly);
+                
+                p{
+                    margin: {
+                        right: 3px;
+                        left: 3px;
+                    }
+                }
+            }
+        }
+
+        .SopeSection1_Content_Part3{
+            width: 984px;
+            display: grid;
+            grid-template-columns: auto auto auto auto;
+            justify-content: center;
+            gap: 16px;
+        }
+        .SopeSection1_Content_Part3_NotProduct{
+            width: 984px;
+            height: 300px;
+            @include Center(center)
+        }
+        .SopeSection1_Content_Part4{
+            @include Center(center);
+            width: 984px;
+            margin: {
+                top: 24px;
+            }
+            .SopeSection1_Content_Part4_Swiper{
+                @include Center(center);
+                
+                width: 600px;
+                overflow: scroll;
+                scrollbar-width: none;
+                
+            }
+
+            .SopeSection1_Content_Part4_Button{
+                @include Center(center);
+                margin: {
+                    left: 6px;
+                    right: 6px;
+                }
+                p{
+                    text-align: center;
+
                 }
             }
         }
@@ -142,22 +213,6 @@
             bottom: 24px;
         }
     }
-    
-    .SopeSection1_Content_Part3{
-        display: grid;
-        grid-template-columns: auto auto auto auto;
-        gap: 16px;
-    }
-    .SopeSection1_Content_Part4{
-        @include Center(center);
-        
-        .SopeSection1_Content_Part4_Button{
-            @include Center(center);
-    
-            p{
-                text-align: center;
-            }
-        }
-    }
-
+      
 }
+
