Continue  In The Sope Page

--- a/src/Section/Sope/SopeSection1/style.scss
+++ b/src/Section/Sope/SopeSection1/style.scss
@@ -74,7 +74,7 @@
 
             .SopeSection1_Aside_Part4_Tag{
                 display: grid;
-                grid-template-columns: auto auto auto;
+                grid-template-columns: auto auto ;
                 justify-items: center;
                 row-gap: 10px;
 
